--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,5 +16,7 @@
         "cstdarg": "c",
         "memory.h": "c"
     },
-    "C_Cpp.errorSquiggles": "disabled"
+    "C_Cpp.errorSquiggles": "disabled",
+    "commentTranslate.targetLanguage": "zh-CN",
+    "commentTranslate.hover.enabled": true
 }
