--- a/onix/src/makefile
+++ b/onix/src/makefile
@@ -47,6 +47,7 @@ $(BUILD)/kernel.bin: \
 	$(BUILD)/lib/string.o  \
 	$(BUILD)/lib/vsprintf.o \
 	$(BUILD)/lib/stdlib.o \
+	$(BUILD)/lib/bitmap.o \
 
 	
 	$(shell mkdir -p $(dir $@))
